Funções novas adicionadas
Find Next & Previous, e ambas as sort. Doxygen iniciado nas funções novas

--- a/Assignement01/Trabalho1/latex/index.tex
+++ b/Assignement01/Trabalho1/latex/index.tex
@@ -1,34 +1,58 @@
-This module provides functionality for creating and manipulating a doubly linked list (DLL) in C programming language.
+This module provides functionality for creating and manipulating a doubly linked list (DLL) in C programming language. $\ast$
+
+
 \begin{DoxyItemize}
-\item 
-\begin{DoxyItemize}
-\item $\ast$
 \item The DLL is a data structure that consists of a sequence of elements, where each element contains a key-\/value pair and maintains references to both the next and previous elements in the sequence.
-\item 
-\item \#\# Features
-\item -\/ {\bfseries{Insertion\+:}} Insert a new element into the DLL with a specified key and data.
-\item -\/ {\bfseries{Removal\+:}} Remove an element from the DLL by its key.
-\item -\/ {\bfseries{Search\+:}} Find an element in the DLL by its key.
-\item -\/ {\bfseries{Initialization\+:}} Initialize an empty DLL.
-\item -\/ {\bfseries{Printing\+:}} Print the contents of the DLL.
-\item 
-\item \#\# File Structure
-\item -\/ {\bfseries{\mbox{\hyperlink{MyDLL_8h}{My\+DLL.\+h}}\+:}} Header file containing declarations of structures and functions.
-\item -\/ {\bfseries{My\+DLL.\+c\+:}} Source file containing implementations of functions declared in \mbox{\hyperlink{MyDLL_8h}{My\+DLL.\+h}}.
-\item -\/ {\bfseries{main.\+c\+:}} Main program file demonstrating usage of the DLL module through test scenarios.
-\item 
-\item \#\# Usage
-\item To use this DLL module in your C program, include the header file {\ttfamily \mbox{\hyperlink{MyDLL_8h}{My\+DLL.\+h}}} in your source code. You can then call the provided functions to perform operations on the doubly linked list.
-\item 
-\item \#\# Test Scenarios
-\item The module includes test scenarios in the {\ttfamily main.\+c} file to demonstrate the functionality of the DLL module. These scenarios cover insertion, removal, and search operations on the DLL.
-\item 
-\item \#\# Author
-\item -\/ Pedro Afonso (104206)
-\item -\/ Carlos Teixeira (103xxx)
-\item 
-\item \#\# Bug Reports
-\item If you encounter any bugs or issues while using this DLL module, please report them \href{https://github.com/pisko19/SETR/issues}{\texttt{ here}}.
-\item 
+\item \doxysubsection*{Features}
 \end{DoxyItemize}
+
+
+\begin{DoxyItemize}
+\item 
+\begin{DoxyItemize}
+\item 
+\end{DoxyItemize}{\bfseries{Insertion\+:}} Insert a new element into the DLL with a specified key and data.
+\item {\bfseries{Removal\+:}} Remove an element from the DLL by its key.
+\item {\bfseries{Search\+:}} Find an element in the DLL by its key.
+\item {\bfseries{Initialization\+:}} Initialize an empty DLL.
+\item {\bfseries{Printing\+:}} Print the contents of the DLL.
+\item 
+\item \doxysubsection*{File Structure}
+\end{DoxyItemize}
+
+
+\begin{DoxyItemize}
+\item 
+\begin{DoxyItemize}
+\item 
+\end{DoxyItemize}{\bfseries{\mbox{\hyperlink{MyDLL_8h}{My\+DLL.\+h}}\+:}} Header file containing declarations of structures and functions.
+\item {\bfseries{My\+DLL.\+c\+:}} Source file containing implementations of functions declared in \mbox{\hyperlink{MyDLL_8h}{My\+DLL.\+h}}.
+\item {\bfseries{main.\+c\+:}} Main program file demonstrating usage of the DLL module through test scenarios.
+\item 
+\item \doxysubsection*{Usage}
+\end{DoxyItemize}
+
+
+\begin{DoxyItemize}
+\item To use this DLL module in your C program, include the header file {\ttfamily \mbox{\hyperlink{MyDLL_8h}{My\+DLL.\+h}}} in your source code. You can then call the provided functions to perform operations on the doubly linked list.
+\item \doxysubsection*{Test Scenarios}
+\end{DoxyItemize}
+
+
+\begin{DoxyItemize}
+\item The module includes test scenarios in the {\ttfamily main.\+c} file to demonstrate the functionality of the DLL module. These scenarios cover insertion, removal, and search operations on the DLL.
+\item \doxysubsection*{Author}
+\end{DoxyItemize}
+
+
+\begin{DoxyItemize}
+\item -\/ Pedro Afonso (104206)~\newline
+
+\item -\/ Carlos Teixeira (103187)
+\item \doxysubsection*{Bug Reports}
+\end{DoxyItemize}
+
+
+\begin{DoxyItemize}
+\item If you encounter any bugs or issues while using this DLL module, please report them \href{https://github.com/pisko19/SETR/issues}{\texttt{ here}}. 
 \end{DoxyItemize}
