--- a/Assignement01/Trabalho1/latex/refman.tex
+++ b/Assignement01/Trabalho1/latex/refman.tex
@@ -177,15 +177,20 @@
 \label{bug}
 \Hypertarget{bug}
 \input{bug}
+\chapter{Module Index}
+\input{modules}
 \chapter{Class Index}
 \input{annotated}
 \chapter{File Index}
 \input{files}
+\chapter{Module Documentation}
+\input{group__MyDLL}
 \chapter{Class Documentation}
 \input{structDLL__List}
 \input{structMyDLL}
 \chapter{File Documentation}
 \input{MyDLL_8h}
+\input{Testes_8h}
 %--- End generated contents ---
 
 % Index
