--- a/Assignement01/Trabalho1/latex/files.tex
+++ b/Assignement01/Trabalho1/latex/files.tex
@@ -1,4 +1,5 @@
 \doxysection{File List}
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{\mbox{\hyperlink{MyDLL_8h}{My\+DLL.\+h}} \\*This file contains all the structures and functions needed for the database creation }{\pageref{MyDLL_8h}}{}
+\item\contentsline{section}{\mbox{\hyperlink{Testes_8h}{Testes.\+h}} \\*This file contains declarations of functions for testing the \mbox{\hyperlink{structMyDLL}{My\+DLL}} functionality }{\pageref{Testes_8h}}{}
 \end{DoxyCompactList}
