--- a/Assignement02/doc/latex/Testes_8h.tex
+++ b/Assignement02/doc/latex/Testes_8h.tex
@@ -29,25 +29,33 @@ void \mbox{\hyperlink{Testes_8h_a1f01e94d270f5e5e796e32ed3c166be8}{Teste\+\_\+\+
 \mbox{\Hypertarget{Testes_8h_acd5a992dd6fa87988049138f7efdb7a7}\label{Testes_8h_acd5a992dd6fa87988049138f7efdb7a7}} 
 void \mbox{\hyperlink{Testes_8h_acd5a992dd6fa87988049138f7efdb7a7}{Teste\+\_\+\+Proc\+\_\+\+All}} (void)
 \begin{DoxyCompactList}\small\item\em Performs a test for the combined processing functionality. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{Testes_8h_a69f892a85645643ac6f29f9a13c1aa9b}{numto\+Char}} (int num, unsigned char $\ast$array, int len)
-\begin{DoxyCompactList}\small\item\em Utility function to convert a number to a character array. \end{DoxyCompactList}\end{DoxyCompactItemize}
+void \mbox{\hyperlink{Testes_8h_a25e423b364de0cfc1fc2a38ae529b1c0}{numto\+Char}} (int num, char array\mbox{[}$\,$\mbox{]}, int len)
+\begin{DoxyCompactList}\small\item\em Utility function to convert a number to a character array. This function was based on chat\+GPT. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
 Header file containing declarations of functions for testing the UART module. 
 
+\begin{DoxyAuthor}{Author}
+Pedro Afonso, 104206 
 
+Carlos Teixeira 103187 
+\end{DoxyAuthor}
+\begin{DoxyDate}{Date}
+01/04/2024
+\end{DoxyDate}
+Functions and structures for testing UART communication. 
 
 \doxysubsection{Function Documentation}
-\mbox{\Hypertarget{Testes_8h_a69f892a85645643ac6f29f9a13c1aa9b}\label{Testes_8h_a69f892a85645643ac6f29f9a13c1aa9b}} 
+\mbox{\Hypertarget{Testes_8h_a25e423b364de0cfc1fc2a38ae529b1c0}\label{Testes_8h_a25e423b364de0cfc1fc2a38ae529b1c0}} 
 \index{Testes.h@{Testes.h}!numtoChar@{numtoChar}}
 \index{numtoChar@{numtoChar}!Testes.h@{Testes.h}}
 \doxysubsubsection{\texorpdfstring{numtoChar()}{numtoChar()}}
-{\footnotesize\ttfamily void numto\+Char (\begin{DoxyParamCaption}\item[{int}]{num,  }\item[{unsigned char $\ast$}]{array,  }\item[{int}]{len }\end{DoxyParamCaption})}
+{\footnotesize\ttfamily void numto\+Char (\begin{DoxyParamCaption}\item[{int}]{num,  }\item[{char}]{array\mbox{[}$\,$\mbox{]},  }\item[{int}]{len }\end{DoxyParamCaption})}
 
 
 
-Utility function to convert a number to a character array. 
+Utility function to convert a number to a character array. This function was based on chat\+GPT. 
 
 
 \begin{DoxyParams}{Parameters}
