--- a/Assignement02/doc/latex/Uart_8h.tex
+++ b/Assignement02/doc/latex/Uart_8h.tex
@@ -45,10 +45,22 @@ void \mbox{\hyperlink{group__Uart_gaaf799f6c05312f43107024da9378761a}{Reset\+Tx\
 \begin{DoxyCompactList}\small\item\em Reset the transmit buffer. \end{DoxyCompactList}\item 
 int \mbox{\hyperlink{group__Uart_ga041e482d7c9408e7dfaaafee90efd950}{get\+Tx\+Buf}} (unsigned char $\ast$buf, int len)
 \begin{DoxyCompactList}\small\item\em Get the transmit buffer. \end{DoxyCompactList}\item 
+int \mbox{\hyperlink{group__Uart_ga213c0124a9aa231dcb94527f77c445e9}{get\+Tx\+Buf\+Len}} (void)
+\begin{DoxyCompactList}\small\item\em Get the transmit buffer lenght. \end{DoxyCompactList}\item 
+int \mbox{\hyperlink{group__Uart_gabe48c57f9125519dd9db20c761b825cf}{get\+Rx\+Buf}} (unsigned char $\ast$buf, int len)
+\begin{DoxyCompactList}\small\item\em Get the receiver buffer. \end{DoxyCompactList}\item 
+int \mbox{\hyperlink{group__Uart_ga8cb22b6cd257b5236e7a43ed24d53889}{get\+Rx\+Buf\+Len}} (void)
+\begin{DoxyCompactList}\small\item\em Get the receiver buffer lenght. \end{DoxyCompactList}\item 
 unsigned int \mbox{\hyperlink{group__Uart_ga77e129fc98b3b9c3c28ae4eab0c88fe3}{Check\+Sum}} (unsigned char $\ast$buf, int nbytes)
 \begin{DoxyCompactList}\small\item\em Calculate the checksum of a string. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{group__Uart_ga776c25f8b6461c270e977f43606396c0}{add\+Value}} (int $\ast$arr, int $\ast$size, int value)
-\begin{DoxyCompactList}\small\item\em Add a value to an array with shifting. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Add a value to an array with shifting. \end{DoxyCompactList}\item 
+int \mbox{\hyperlink{group__Uart_ga331baff64d96016e56ce2f2dab0016ac}{get\+Instant\+Temp}} (void)
+\begin{DoxyCompactList}\small\item\em Get the instant temperature. \end{DoxyCompactList}\item 
+int \mbox{\hyperlink{group__Uart_ga8937ee329d1a8100955fb7181a52a7da}{get\+Instant\+Hum}} (void)
+\begin{DoxyCompactList}\small\item\em Get the instant humidity. \end{DoxyCompactList}\item 
+int \mbox{\hyperlink{group__Uart_gaae66e095303035cfcad38b5b197e0e98}{get\+Instant\+CO2}} (void)
+\begin{DoxyCompactList}\small\item\em Get the instant CO2. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Detailed Description}
