--- a/Assignement02/doc/latex/files.tex
+++ b/Assignement02/doc/latex/files.tex
@@ -2,4 +2,6 @@
 Here is a list of all documented files with brief descriptions\+:\begin{DoxyCompactList}
 \item\contentsline{section}{/home/pedro/\+Documentos/\+SETR/\+Assignement02/header/\mbox{\hyperlink{Testes_8h}{Testes.\+h}} \\*Header file containing declarations of functions for testing the UART module }{\pageref{Testes_8h}}{}
 \item\contentsline{section}{/home/pedro/\+Documentos/\+SETR/\+Assignement02/header/\mbox{\hyperlink{Uart_8h}{Uart.\+h}} \\*Header file containing declarations of structures and functions for UART communication }{\pageref{Uart_8h}}{}
+\item\contentsline{section}{/home/pedro/\+Documentos/\+SETR/\+Assignement02/header/{\bfseries unity.\+h} }{\pageref{unity_8h}}{}
+\item\contentsline{section}{/home/pedro/\+Documentos/\+SETR/\+Assignement02/header/{\bfseries unity\+\_\+internals.\+h} }{\pageref{unity__internals_8h}}{}
 \end{DoxyCompactList}
