--- a/Assignement02/doc/latex/refman.tex
+++ b/Assignement02/doc/latex/refman.tex
@@ -175,10 +175,14 @@
 \label{index}\hypertarget{index}{}\input{index}
 \chapter{Module Index}
 \input{modules}
+\chapter{Class Index}
+\input{annotated}
 \chapter{File Index}
 \input{files}
 \chapter{Module Documentation}
 \input{group__Uart}
+\chapter{Class Documentation}
+\input{structUNITY__STORAGE__T}
 \chapter{File Documentation}
 \input{Testes_8h}
 \input{Uart_8h}
