--- a/Assignement02/doc/latex/group__Uart.tex
+++ b/Assignement02/doc/latex/group__Uart.tex
@@ -290,7 +290,7 @@ Print what type of error is if was one.
 
 Get the CO2 array. 
 
-This function returns he pointer for the CO2 array
+This function returns the pointer for the CO2 array
 
 \begin{DoxyReturn}{Returns}
 The pointer for the CO2 array. 
@@ -305,7 +305,7 @@ The pointer for the CO2 array.
 
 Get the humidity array. 
 
-This function returns he pointer for the humidity array
+This function returns the pointer for the humidity array
 
 \begin{DoxyReturn}{Returns}
 The pointer for the humidity array. 
@@ -427,7 +427,7 @@ Status code\+:
 
 Get the temperature array. 
 
-This function returns he pointer for the temperature array
+This function returns the pointer for the temperature array
 
 \begin{DoxyReturn}{Returns}
 The pointer for the temperature array. 
