Changes that weren´t pushed

--- a/Assignement03/doc/latex/index.tex
+++ b/Assignement03/doc/latex/index.tex
@@ -46,7 +46,7 @@ This module emulates a simple vending machine using the n\+RF52840 development k
 \item {\bfseries{\mbox{\hyperlink{Statechart__required_8h}{Statechart\+\_\+required.\+h}}\+:}} Header file containing prototypes for functions required by the state machine implementation.
 \end{DoxyItemize}
 
-{\bfseries{Usage\+:}} To use this vending machine emulator in your C program, include the header file Vending\+Machine.\+h in your source code. You can then call the provided functions to interact with the vending machine via button inputs and LED outputs.
+{\bfseries{Usage\+:}} To use this vending machine emulator in your C program, include the header file statechart.\+h in your source code. You can then call the provided functions to interact with the vending machine via button inputs and LED outputs. Additionally, ensure that statechart\+\_\+required.\+h is included to access the required function prototypes for the state machine implementation.
 
 {\bfseries{Test Scenarios\+:}} The module includes test scenarios in the \mbox{\hyperlink{main_8c}{main.\+c}} file to demonstrate the functionality of the vending machine emulator. Additionally, the Test.\+h and Test.\+c files provide test functions for verifying the behavior of the vending machine. These functions perform various operations such as inserting coins, browsing products, making purchases, and returning credit.
 
