--- a/Assignement03/doc/latex/main_8c.tex
+++ b/Assignement03/doc/latex/main_8c.tex
@@ -88,8 +88,9 @@ The vending machine supports three products with different prices. Users can ins
 \item Carlos Teixeira (103187)
 \end{DoxyItemize}
 \end{DoxyAuthor}
-\begin{DoxyRefDesc}{Bug}
-\item[\mbox{\hyperlink{bug__bug000001}{Bug}}]If you encounter any issues while using this emulator, please report them \href{https://github.com/pisko19/SETR/issues}{\texttt{ here}}. \end{DoxyRefDesc}
+\begin{DoxyDate}{Date}
+19/05/2024 
+\end{DoxyDate}
 
 
 \doxysubsection{Function Documentation}
