doxygen added on main

--- a/Assignement04/doc/latex/index.tex
+++ b/Assignement04/doc/latex/index.tex
@@ -72,7 +72,7 @@ This project implements a simple Input/\+Output sensor/actuator module using the
 
 {\bfseries{File Structure\+:}}
 \begin{DoxyItemize}
-\item {\bfseries{main.\+c}}\+: Main program file demonstrating usage of the I/O module and interaction with the hardware.
+\item {\bfseries{\mbox{\hyperlink{main_8c}{main.\+c}}}}\+: Main program file demonstrating usage of the I/O module and interaction with the hardware.
 \end{DoxyItemize}
 
 {\bfseries{Authors\+:}}
