--- a/Assignement04/doc/latex/refman.tex
+++ b/Assignement04/doc/latex/refman.tex
@@ -173,6 +173,14 @@
 %--- Begin generated contents ---
 \chapter{I/O Sensor/\+Actuator Module}
 \label{index}\hypertarget{index}{}\input{index}
+\chapter{Class Index}
+\input{annotated}
+\chapter{File Index}
+\input{files}
+\chapter{Class Documentation}
+\input{structUNITY__STORAGE__T}
+\chapter{File Documentation}
+\input{main_8c}
 %--- End generated contents ---
 
 % Index
